# HSE_AI

./: .env  .env.example  .gitignore  README.md  random_shit.txt
backend/: Cargo.toml  local_state.json
backend/contracts/: ai_quiz.schema.json
backend/migrations/: 20260226180000_init.sql
backend/scripts/: gigachat_generate.py
backend/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  ws_protocol.rs
backend/tests/: integration.rs
docs/: architecture.md  gigachat_system_prompt.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/games/onoff_game/: index.js
frontend/public/games/onoff_game/src/: keys.js
frontend/public/games/onoff_src/: package-lock.json
frontend/public/games/underrun_src/source/: entity-player.js  game.js  main.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: GameCanvas.tsx  QuestionCard.tsx
frontend/src/lib/: api.ts  ws.ts
scripts/: run_all.sh
underrun-master/: package-lock.json
